@@ -16,10 +16,46 @@ repositories {
 }
 
 dependencies {
-    implementation 'org.springframework.boot:spring-boot-starter'
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
+    runtimeOnly 'com.h2database:h2'
+    compileOnly 'org.projectlombok:lombok'
+    annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    testImplementation 'org.seleniumhq.selenium:selenium-java:4.16.1'
+
+
+    implementation group: 'org.postgresql', name: 'postgresql', version: '42.6.0'
+
+    testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.10.0'
+    testImplementation group: 'junit', name: 'junit', version: '4.13.2'
+    testImplementation group: 'org.mockito', name: 'mockito-junit-jupiter', version: '5.6.0'
+    testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter', version: '5.10.0'
+    testImplementation 'org.junit.jupiter:junit-jupiter:5.7.0'
+
+
 }
 
 tasks.named('test') {
     useJUnitPlatform()
 }
+test {
+    jvmArgs '-XX:+EnableDynamicAgentLoading'
+}
+//jacocoTestReport {
+//    dependsOn test
+//    reports {
+//        xml.required = false
+//        csv.required = false
+//        html.outputLocation = layout.buildDirectory.dir('jacocoHtml')
+//    }
+//    afterEvaluate {
+//        classDirectories.setFrom(files(classDirectories.files.collect {
+//            fileTree(dir: it, exclude: ['com/example/mprlabs/student/StudentConfig.java'
+//                                        , 'com/example/mprlabs/MprLabsApplication.java'
+//                                        , 'com/example/mprlabs/student/Student.java'
+//            ])
+//        }))
+//    }
+//}
